# codex

./: .codespellrc  AGENTS.md  SUBAGENT_IMPLEMENTATION.md  package.json  test
codex-cli/scripts/: build_npm_package.py  install_native_deps.sh
codex-mcp-manager/: package-lock.json  package.json  tsconfig.json
codex-mcp-manager/src/: debug-server.ts  index.ts  investigate.ts
codex-mcp-manager/src/lib/: config.ts  schemas.ts
codex-mcp-manager/test/: test-direct.ts  test-effort-config.ts  test-mcp.ts  test-model-config.ts
codex-rs/: Cargo.toml  README.md
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: review_prompt.md  subagent_prompt.md
codex-rs/core/src/: chat_completions.rs  client.rs  client_common.rs  codex.rs  config.rs  conversation_manager.rs  error.rs  exec.rs  lib.rs  model_family.rs  openai_tools.rs  pr_checks_tool.rs  safety.rs  shell.rs  subagent.rs  subagent_tools.rs
codex-rs/core/tests/: subagent_test.rs  subagent_tools_test.rs
codex-rs/exec/src/: cli.rs  event_processor_with_human_output.rs  lib.rs
codex-rs/mcp-client/src/: mcp_client.rs
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs
codex-rs/protocol/src/: mcp_protocol.rs  protocol.rs
codex-rs/proxy/: Cargo.toml
codex-rs/proxy/src/: lib.rs  main.rs
codex-rs/proxy/tests/: passthrough.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  (+13 more)
docs/: getting-started.md  subagent_orchestration_proposal.md  subagents.md
scripts/: build-local-cli.mjs  build_local_release.sh
(+39 files in other folders)
