[package]
edition = "2024"
name = "codex-proxy"
version = { workspace = true }

[[bin]]
name = "codex-proxy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
codex-arg0 = { path = "../arg0" }
codex-common = { path = "../common", features = ["cli"] }
codex-core = { path = "../core" }
http = "1"
hyper = { version = "1", features = ["server"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
portpicker = "0.1"
pretty_assertions = "1.4.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
